# dune-gesis

./: ACKNOWLEDGEMENTS  CMakeLists.txt  COPYING  INSTALL  Makefile.am  README  README.GIT  README.md  RELEASE_NOTES  config.h.cmake  configure.ac  dune-gesis.pc.in  dune.module
cmake/modules/: AddFFTW3Flags.cmake  AddHDF5Flags.cmake  CMakeLists.txt  DuneGesisMacros.cmake  FindFFTW3.cmake  Makefile.am
doc/: Makefile.am
doc/doxygen/: Doxylocal
dune/: CMakeLists.txt  Makefile.am
dune/gesis/: CMakeLists.txt  Makefile.am  gesis.hh
dune/gesis/BVPs/: DarcyVelocityCache.hh  ForwardSimulator.hh  GeoElectricalPotentialParameters.hh  GroundWaterParameters.hh  HeatTransportParameters.hh  MeshPlecletNumber.hh  ParameterTraits.hh  TransportParameters.hh  regularize.hh  totalMass.hh
dune/gesis/BVPs/DG/: GWE_CCFV.hh  GroundWaterOperatorCCFV.hh  RT0flux.hh  TPE_DG.hh  TransportOperatorDG.hh  dgf_pressurefield.hh  orderingschemes.hh  reorderedgridview.hh  reorderedindexset.hh  rt0_pressurefield.hh
dune/gesis/BVPs/FEM/: GWE_Galerkin.hh  GroundWaterOperatorGalerkin.hh  TPE_SDFEM.hh  TransportOperatorSDFEM.hh  deltaSD.hh
dune/gesis/BVPs/adaptive/: RedistributeDataHandle.hh  adaptivity.hh  driver_h_adaptive.hh  driver_h_adaptive_M0.hh  driver_h_adaptive_M1.hh  ee_DG_h_adaptive.hh
dune/gesis/BVPs/obs/: MeasurementList.hh  take_measurements_on_dgf.hh  take_measurements_on_dgf_lnK.hh
dune/gesis/BVPs/projectors/: CoarseGridP0Datahandle.hh  CoarseGridP0Projector.hh  L2Projection.hh  L2ProjectionOperator.hh  L2SubspaceProjector.hh
dune/gesis/BVPs/sourceterms/: FunctionSource.hh  GEP_FunctionSource.hh  GeoelectricalPointSource.hh  GeoelectricalPotentialSource.hh  HeatPumpingSource.hh  NullSource.hh  PointFunctionSource.hh  PointSource.hh  PumpingSource.hh  SolutePumpingSource.hh  SourceBaseClass.hh  TP_FunctionSource.hh  source_head_transport.hh
dune/gesis/BVPs/wells/: calibrateWellCentersToElementCenters.hh  wellposition.hh
dune/gesis/DG/: GWE_CCFV.hh  TPE_DG.hh  TransportOperatorDG.hh  reorderedgridview.hh
dune/gesis/FEM/: GroundWaterOperatorGalerkin.hh  TransportOperatorSDFEM.hh  deltaSD.hh
dune/gesis/QLGA/: AT_sensitivity_field.hh  SensitivityClass.hh  covariancematrix_times_vector.hh  cross_covariance_JQ.hh  estimation_variance.hh  geoelectrical_potential_sensitivities.hh  head_sensitivities.hh  head_sensitivity_field.hh  heat_sensitivities.hh  inversionkernel.hh  lnK_sensitivities.hh  m0_sensitivities.hh  m0_sensitivity_field.hh  m1_sensitivities.hh  m1_sensitivity_field.hh  objectivefunction.hh
dune/gesis/common/: DarcyVelocityCache.hh  DenseMatrix.hh  ForwardSimulator.hh  MPI_Tools.hh  MyMPIComm.hh  ParameterTraits.hh  Vector.hh  YaspPartition.hh  datatypes.hh  deltafunction.hh  differenceAdapters.hh  eval.hh  general.hh  gfs_utilities.hh  initialize_DuneGrid.hh  my_gfs_utilities.hh
dune/gesis/common/io/: ALUTools.hh  DGFTools.hh  HDF5Tools.hh  IO_locations.hh  IO_routines.hh  VTKPlot.hh  inputfile.hh  lineplot.hh  logfile.hh
dune/gesis/driver/: driver.hh  driverALU.hh  driverUG.hh  initialize_DuneGrid.hh
dune/gesis/io/: ALUTools.hh  DGFTools.hh  IO_routines.hh  VTKPlot.hh  inputfile.hh  logfile.hh
dune/gesis/obs/: MeasurementList.hh  take_measurements_on_dgf.hh
dune/gesis/projectors/: CoarseGridP0Datahandle.hh  CoarseGridP0Projector.hh  L2SubspaceProjector.hh
dune/gesis/sourceterms/: HeatPumpingSource.hh  PointFunctionSource.hh  PointSource.hh  PumpingSource.hh  SolutePumpingSource.hh  SourceBaseClass.hh  TP_FunctionSource.hh
dune/gesis/yfield/: FFTFieldGenerator.hh  FieldData.hh  generate_CR.hh
dune/gesis/yfield/RAND/: mersenne.cc  stoc1.cc  stocc.hh
m4/: CMakeLists.txt  Makefile.am  boost_property_tree.m4  dune-gesis.m4  fftw3-mpi.m4
src/: CMakeLists.txt  InputFile2d.xml  InputFile3d.xml  Makefile.am  alugrid_3d.cc  build.sh  dune_gesis.cc  geo_inversion_2d.cc  geo_inversion_3d.cc  my_macros.hh  ug_2d.cc
tools/: bash_install.sh  example.opts  getDUNE.sh  getSoftware.sh  gitcloneDUNE.sh  h5pyplot.py  weightedError.py
tools/installation/: bash_install.sh  example.opts  getDUNE.sh  getSoftware.sh  gitcloneDUNE.sh
